<resources>
    <string name="app_name">Calculator App 1</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="plusMinus">+/-</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="zero">0</string>
    <string name="parentheses">()</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="calculator_app">CALCULATOR APP</string>
    <string name="enter_a_value_here">Enter a value here</string>


</resources>